--- a/RaalProjectPreview/Views/Customer/Index.cshtml
+++ b/RaalProjectPreview/Views/Customer/Index.cshtml
@@ -13,17 +13,34 @@
         <button type="button" v-on:click="GetMyCase()" class="btn btn-secondary">Корзина</button>
     </div>
     <div style="margin-top: .4em;" class="row">
-        <div style="margin-top: .2em" class="col-md-8">
+        <div style="margin-top: .2em" class="col-md-9">
             <dfn>Товары</dfn>
             <form id="searchitem">
-                Поиск <input name="query" v-model="searchQueryItem" />
+                <div class="row">
+                    <dfn class="col-sm-4">Товары</dfn>
+                    <div class="col-sm-4">
+                        <label for="sw2">Фильтр по</label>
+                        <select id="sw2" class="form-control" v-model="searchItemBy">
+                            <option>Id</option>
+                            <option>Code</option>
+                            <option>Name</option>
+                            <option>Price</option>
+                            <option>Category</option>
+                        </select>
+                    </div>
+                    <div class="col-sm-4">
+                        <label for="inp2">Поиск</label>
+                        <input id="inp2" class="form-control" name="query" v-model="searchQueryItem" />
+                    </div>
+                </div>
             </form>
             <item-grid :items="Items"
                        :columns="GridItemsCols"
+                       :by="searchItemBy"
                        :filter-key="searchQueryItem">
             </item-grid>
         </div>
-        <div class="col-md-offset-1 col-md-3">
+        <div class="col-md-offset-1 col-md-2">
             <div class="card">
                 <div class="card-header">
                     Корзина
@@ -40,95 +57,32 @@
         </div>
     </div>
     <div style="margin-top: .2em">
-        <dfn>Заказы</dfn>
         <form id="searchorder">
-            Поиск <input name="query" v-model="searchQueryOrder" />
+            <div class="row">
+                <dfn class="col-sm-4">Заказы</dfn>
+                <div class="col-sm-4">
+                    <label for="sw3">Фильтр по</label>
+                    <select id="sw3" class="form-control" v-model="searchOrderBy">
+                        <option>Id</option>
+                        <option>CustomerId</option>
+                        <option>OrderDate</option>
+                        <option>ShipmentDate</option>
+                        <option>OrderNumber</option>
+                        <option>Status</option>
+                    </select>
+                </div>
+                <div class="col-sm-4">
+                    <label for="inp3">Поиск</label>
+                    <input id="inp3" class="form-control" name="query" v-model="searchQueryOrder" />
+                </div>
+            </div>
         </form>
         <order-grid :orders="Orders"
                     :columns="GridOrdersCols"
+                    :by="searchOrderBy"
                     :filter-key="searchQueryOrder">
         </order-grid>
     </div>
 </div>
-<script type="text/x-template" id="alertmodal-template">
-    <template v-if="customerPanelVue.showModalAlert">
-        <transition name="modal">
-            <div class="modal-mask">
-                <div class="modal-wrapper">
-                    <div class="modal-container">
-                        <div class="modal-header">
-                            <slot name="header">
-                                <h5 class="modal-title text-center">Server response</h5>
-                                <button type="button" class="close" v-on:click="Close()" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </slot>
-                        </div>
-                        <div class="modal-body">
-                            <slot name="body">
-                                <h3 v-bind:class="stl">{{msg}}</h3>
-                            </slot>
-                        </div>
-                        <div class="modal-footer">
-                            <slot name="footer">
-                                <button class="modal-default-button" v-on:click="Close()">
-                                    OK
-                                </button>
-                            </slot>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </transition>
-    </template>
-</script>
-<script type="text/x-template" id="items-template">
-    <table>
-        <thead>
-            <tr>
-                <th v-for="key in columns"
-                    v-on:click="sortBy(key)"
-                    :class="{ active: sortKey == key }">
-                    {{ key | capitalize }}
-                    <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'">
-                    </span>
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr v-for="entry in filteredItems">
-                <td v-for="key in columns">
-                    {{ entry[key] }}
-                </td>
-                <td><button type="button" class="btn btn-default" v-on:click="customerPanelVue.AddItemToCase(entry)">add to case</button></td>
-            </tr>
-        </tbody>
-    </table>
-</script>
-<script type="text/x-template" id="orders-template">
-    <table>
-        <thead>
-            <tr>
-                <th v-for="key in columns"
-                    v-on:click="sortBy(key)"
-                    :class="{ active: sortKey == key }">
-                    {{ key | capitalize }}
-                    <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'">
-                    </span>
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr v-for="entry in filteredOrders">
-                <td v-for="key in columns">
-                    {{ entry[key] }}
-                </td>
-                <td><button type="button" class="btn btn-default text-primary" v-on:click="customerPanelVue.CloseOrder(entry)">Close</button></td>
-            </tr>
-        </tbody>
-    </table>
-</script>
 <script type="text/javascript" src="~/Scripts/Vue/CustomerPanelVue.js"></script>
 <script type="text/javascript" src="~/Scripts/Vue/CustomerPanelModalVue.js"></script>
